--- a/post/templates/show.html
+++ b/post/templates/show.html
@@ -14,7 +14,7 @@
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">{{post.title}}</h1>
             <p class="leading-relaxed mb-3">{{post.content}}</p>
             <div class="flex items-center flex-wrap ">
-              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="{% url 'posts.show' post.id %}">Learn More
+              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
                 <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" style="--darkreader-inline-stroke: currentColor;" data-darkreader-inline-stroke="">
                   <path d="M5 12h14"></path>
                   <path d="M12 5l7 7-7 7"></path>
